# laba15

CLionProjects/laba15/: CMakeLists.txt  main.c
CLionProjects/laba15/libs/: CMakeLists.txt
CLionProjects/laba15/libs/algorithms/: CMakeLists.txt
CLionProjects/laba15/libs/algorithms/array/: array.c  array.h  unordered_array_set.c  unordered_array_set.h
CLionProjects/laba15/libs/data_structures/: CMakeLists.txt
CLionProjects/laba15/libs/data_structures/matrix/: matrix.c  matrix.h  test.matrix.c  test.matrix.c.h
